--- a/index.html
+++ b/index.html
@@ -123,8 +123,16 @@
         </div>
     </main>
 
-    <section> 
-        
+    <section>
+    <div class="pagination">
+        <a href="#">&laquo;</a>
+        <a href="#" class="active">1</a>
+        <a href="#">2</a>
+        <a href="#">3</a>
+        <a href="#">4</a>
+        <a href="#">5</a>
+        <a href="#">&raquo;</a>
+      </div>
     </section>
     
     <footer>
