--- a/index.html
+++ b/index.html
@@ -136,7 +136,7 @@
     </section>
     
     <footer>
-        gegd
+        <p>⇝ Paula Quintero - Desafío LATAM 2024 ⇜</p>
     </footer>
 
 </div>
