Information inline skates

--- a/index.html
+++ b/index.html
@@ -38,88 +38,90 @@
 
     <main>
 
+        <!-- Entiendo que poner un link dentro de un botón no es la mejor práctica pero es para tener las páginas -->
+
         <!-- primera carta -->
         <div class="card">
             <img src="./assets/images/patin9.jpg">
-            <h4>Patin profesional</h4>
-            <button class="info">Ver más</button>
+            <h4>Patines SR3 Cougar</h4>
+           <a href="https://www.cougar.com.co/t/patines-profesionales/sr3/sr3-patines-en-linea-profesionales-cougar/"><button class="info">Ver más</button></a>
         </div>
 
         <!-- segunda carta -->
         <div class="card">
             <img src="./assets/images/patin2.webp">
-            <h4>Patin profesional</h4>
-            <button class="info">Ver más</button>
+            <h4>Patines BNT Bont</h4>
+            <a href="https://bont.com/collections/inline-speed-skates/products/bnt-inline-speed-skates"><button class="info">Ver más</button></a>
         </div>
 
         <!-- tercera carta -->
         <div class="card">
             <img src="./assets/images/patin5.webp">
-            <h4>Patin profesional</h4>
-            <button class="info">Ver más</button>
+            <h4>Patines Bont bnt 2pt</h4>
+            <a href="https://bont.com/products/bnt-195mm-inline-speed-skate-boots?variant=32006502875249"><button class="info">Ver más</button></a>
         </div>
 
         <!-- cuarta carta -->
         <div class="card">
             <img src="./assets/images/patin3.png">
-            <h4>Patin profesional</h4>
-            <button class="info">Ver más</button>
+            <h4>Patines rosados Accel</h4>
+            <a href="https://www.slideinline.com/es/patines-velocidad/11694-68337-powerslide-accel-race-pink-110100.html"><button class="info">Ver más</button></a>
         </div>
 
         <!-- quinta carta -->
         <div class="card">
             <img src="./assets/images/patin.webp">
-            <h4>Patin profesional</h4>
-            <button class="info">Ver más</button>
+            <h4>Patines Bont Jet</h4>
+            <a href="https://bont.com/collections/inline-speed-skates/products/jet-inline-speed-skate?variant=32016012017777"><button class="info">Ver más</button></a>
         </div>
 
         <!-- sexta carta -->
         <div class="card">
             <img src="./assets/images/patines11.webp">
-            <h4>Patin profesional</h4>
-            <button class="info">Ver más</button>
+            <h4>Patines fucsia Canariam</h4>
+            <a href="https://canariam.com/inicio/88-combo-patin-onix-gp-giant-plus"><button class="info">Ver más</button></a>
         </div>
 
          <!-- séptima carta -->
          <div class="card">
             <img src="./assets/images/patin10.jpg">
-            <h4>Patin profesional</h4>
-            <button class="info">Ver más</button>
+            <h4>Patines SR1 Cougar</h4>
+            <a href="https://www.cougar.com.co/t/patines-profesionales/sr1/patines-en-linea-profesionales-cougar-sr1/"><button class="info">Ver más</button></a>
         </div>
 
          <!-- octava carta -->
          <div class="card">
             <img src="./assets/images/patin7.jpg">
-            <h4>Patin profesional</h4>
-            <button class="info">Ver más</button>
+            <h4>Patines SR7 Cougar</h4>
+            <a href="https://www.cougar.com.co/t/patines-profesionales/sr7/sr7-patines-en-linea-profesionales-cougar/"><button class="info">Ver más</button></a>
         </div>
 
          <!-- novena carta -->
          <div class="card">
             <img src="./assets/images/patin6.WebP">
-            <h4>Patin profesional</h4>
-            <button class="info">Ver más</button>
+            <h4>Patines Luigino Strut</h4>
+            <a href="https://atomskates.com/collections/luigino-inline/products/luigino-strut-outdoor-inline-skate-package"><button class="info">Ver más</button></a>
         </div>
 
          <!-- décima carta -->
          <div class="card">
             <img src="./assets/images/patin12.jpg">
-            <h4>Patin profesional</h4>
-            <button class="info">Ver más</button>
+            <h4>Patines aobald N1</h4>
+            <a href="https://www.alacalufe.cl/product/favorito-patin-de-velocidad-aobald-n1-rosa/"><button class="info">Ver más</button></a>
         </div>
 
          <!-- once carta -->
          <div class="card">
-            <img src="./assets/images/patin1.webp">
-            <h4>Patin profesional</h4>
-            <button class="info">Ver más</button>
+            <img src="./assets/images/patin1.jpg">
+            <h4>Patines 3X Powerslide</h4>
+            <a href="https://powerslide.com/products/3x-gold-adj"><button class="info">Ver más</button></a>
         </div>
 
          <!-- doce carta -->
          <div class="card">
             <img src="./assets/images/patin8.png">
-            <h4>Patin profesional</h4>
-            <button class="info">Ver más</button>
+            <h4>Patines Orion Canariam</h4>
+            <a href="https://canariam.com/inicio/1802-combo-patin-onix-superlight"><button class="info">Ver más</button></a>
         </div>
     </main>
 
